@@ -1,3 +1,7 @@
+2015-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* jpegimage.c: Fix a bug introduced by me on 2015-02-16.
+
 2015-03-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* spc_tpic.c: Make tpic "ar" command dvips compatible to fix the problem
